--- a/main.html
+++ b/main.html
@@ -182,7 +182,7 @@
     </div>
 
     <!-- Home Button -->
-    <button class="home-btn" onclick="window.location.href='landing.html'">Home</button>
+    <button class="home-btn" onclick="window.location.href='index.html'">Home</button>
 
     <script>
         const commandInput = document.getElementById('command-input');
